2013-02-16  Araki Ken  <arakiken@users.sf.net>

	* win32/x_window.c, win32/x_xic.c: F10 key is available.

	* win32/x_xic.c: Range check bug is fixed in x_xic_get_str().

	* win32/x.h:
	  - The definition of XK_Zenkaku_Hankaku, XK_Henkan_Mode and
	    XK_Muhenkan is added.
	  - Range check bug of IsKeypadKey() is fixed.

2013-02-15  Araki Ken  <arakiken@users.sf.net>

	* fb/x.h, fb/x_display.c: Numlock key is supported.

2013-02-13  Araki Ken  <arakiken@users.sf.net>

	* x.h, x_display.c: 0x100 is added to KEY_KPXX keys to distinguish them from
	  the same code keys.

2013-02-12  Araki Ken  <arakiken@users.sf.net>

	* x.c: XStringToKeysym() supports Zenkaku_Hankaku, Henkan_Mode and Muhenkan.

	* fb/x_display.c: Zenkaku_Hankaku, Henkan_Mode and Muhenkan key syms
	  are set from its scan codes.

	* doc/en/README.fb, doc/ja/README.fb: Updated.

2013-02-11  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c: Minor fixes for FreeBSD termios.

	* fb/x.h: Minor fixes.

	* doc/en/README.fb, doc/ja/README.fb: Updated.

2013-02-10  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c: The button state of any event mouse tracking is changed
	  from 3 to 35.

	* x_sb_screen.c, x_window.c: The hack of repositioning windows when
	  "scrollbar_mode" option is changed is moved from x_window_(un)map()
	  to change_sb_mode().

2013-02-10  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c: Minor fixes.

	* x_im_status_screen.c: Minor fixes.

	* fb/x_window.c:
	  clear_margin_area() is not called if flag is not specified to
	  NOTIFY_TO_MYSELF in x_window_resize().
	  (Without this fix, segfault happens when kbd:arabic window is shown in
	  the bottom of the screen.)

	* fb/x.h, fb/x_display.c: Keyboard mode is set to K_CODE instead of K_XLATE
	  in order to handle modifier keys in framebuffer@FreeBSD.

2013-02-08  Araki Ken  <arakiken@users.sf.net>

	* doc/en/README.fb, doc/ja/README.fb: Updated.

	* fb/x.h, fb/x_color.c, fb/x_display.c: Support for FreeBSD is added.
